[gd_scene load_steps=10 format=3 uid="uid://5v34nt0bbvuj"]

[ext_resource type="Script" path="res://scripts/corruption.gd" id="1_xtbs4"]
[ext_resource type="Shader" path="res://assets/corruption.gdshader" id="2_d7pbe"]
[ext_resource type="Texture2D" uid="uid://o6bfymype5ra" path="res://assets/background.png" id="3_qgo6g"]
[ext_resource type="Texture2D" uid="uid://dfl8h37bwigmi" path="res://assets/wall.png" id="4_ddyg7"]
[ext_resource type="PackedScene" uid="uid://crp2e7eo3bqw2" path="res://scenes/death_screen.tscn" id="5_0x4jh"]
[ext_resource type="PackedScene" uid="uid://b7boqxochp1h6" path="res://scenes/player.tscn" id="5_k17gu"]
[ext_resource type="PackedScene" uid="uid://xr5jlmglonna" path="res://scenes/test_platform.tscn" id="6_6nqme"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ofg1w"]
shader = ExtResource("2_d7pbe")
shader_parameter/amount = 100
shader_parameter/pos = 0.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1o7r2"]

[node name="Corruption" type="Node2D"]
script = ExtResource("1_xtbs4")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ofg1w")
position = Vector2(2, 0)
texture = ExtResource("3_qgo6g")
centered = false

[node name="DeathBarrier" type="Area2D" parent="Background"]
position = Vector2(78, 0)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/DeathBarrier"]
position = Vector2(-3.41336e-06, 1)
shape = SubResource("WorldBoundaryShape2D_1o7r2")

[node name="Sprite2D" type="Sprite2D" parent="Background/DeathBarrier"]
position = Vector2(3.62002e-06, 3)
rotation = 1.5708
texture = ExtResource("4_ddyg7")
centered = false
offset = Vector2(0, -768)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Background/DeathBarrier"]
rect = Rect2(0, 0, 768, 10)

[node name="Player" parent="." instance=ExtResource("5_k17gu")]
position = Vector2(903, 437)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-380, -206)
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 4096
limit_bottom = 768
limit_smoothed = true

[node name="TestPlatform" parent="." instance=ExtResource("6_6nqme")]
position = Vector2(915, 531)

[node name="TestPlatform2" parent="." instance=ExtResource("6_6nqme")]
position = Vector2(1248, 478)

[node name="TestPlatform3" parent="." instance=ExtResource("6_6nqme")]
position = Vector2(1628, 372)

[node name="TestPlatform4" parent="." instance=ExtResource("6_6nqme")]
position = Vector2(2074, 298)

[node name="TestPlatform5" parent="." instance=ExtResource("6_6nqme")]
position = Vector2(2512, 294)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeathScreen" parent="CanvasLayer" instance=ExtResource("5_0x4jh")]

[connection signal="body_entered" from="Background/DeathBarrier" to="Player" method="_on_death_barrier_body_entered"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
